# pyteknic-mock

./: README.md  pyproject.toml
pyteknic/: __init__.py  main.py
